docs/k3s/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-web-ui
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.local.spaelling.xyz
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend-custom
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn.local.spaelling.xyz
      secretName: longhorn-web-ui-tls
